# educationalManagementSystem

./: CMakeLists.txt  adjust.md  答辩.md
.cache/clangd/index/: EducationalManagementSystem.c.193EFD776CBCF276.idx  EducationalManagementSystem.c.3A7BC1D47B32C4E1.idx  EducationalManagementSystem.c.465C55E02ECE29A6.idx  EducationalManagementSystem.h.265D780E0755921B.idx  EducationalManagementSystem.h.509F579E82160FA1.idx  EducationalManagementSystem.h.8497A3B1F388E5D2.idx  EducationalManagementSystem.h.99E686E5EC4C4FA1.idx  RBTree.c.22BDAB7A0D83C73B.idx  RBTree.c.31A282C579A35010.idx  RBTree.c.781D5B1015559877.idx  RBTree.c.F586E567C11354BF.idx  RBTree.h.2C026CB2BCB0202A.idx  RBTree.h.48895D78867B03BA.idx  RBTree.h.51B0C11893E231EB.idx  RBTree.h.BF8BAF51FE7D322E.idx  SDL.h.785CCF54B268656D.idx  SDL.h.7BBDB51740B7F7FA.idx  SDL.h.84747E434DC92290.idx  SDL.h.CA2AA0FE88178F35.idx  SDL_assert.h.4956895BC2E28FB7.idx  SDL_assert.h.923B35FC2F9CB03E.idx  SDL_assert.h.9EC39D5D6456CC7C.idx  SDL_assert.h.FCED862F81420594.idx  SDL_atomic.h.393500E221DBA2E1.idx  SDL_atomic.h.44D88814E9A0578F.idx  (+236 more)
RBTree/: CMakeLists.txt  RBTree.c  RBTree.h
SDL2/include/: SDL_config.h  SDL_revision.h
SDL2/lib/: libSDL2-2.0.so.0.3200.6  libSDL2_image-2.0.so.0.800.8  libSDL2_mixer-2.0.so.0.800.1  libSDL2_ttf-2.0.so.0.2400.0
data/: course.csv  root.csv  student.csv
include/: EducationalManagementSystem.h  file.h  loggin.h  root.h  student.h  teacher.h
resources/: root_set_up_a_user_account_and_initial_password.png~
src/: EducationalManagementSystem.c  file.c  loggin.c  main.c  root.c  student.c  teacher.c
